[project]
name = "BengalSafeVote"
version = "1.0.0"
description = "Advanced Election Safety & Education Assistant using Gemini 2.0 Flash"
authors = [
    { name = "BengalSafeVote Team" }
]
dependencies = [
    "streamlit>=1.31.0",
    "google-generativeai>=0.4.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.2.0"
]

[tool.setuptools]
packages = ["core", "utils", "ui"]
